// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`scrollMarginRight renders 0 1`] = `
Array [
  .c0 {
  -webkit-scroll-margin-right: 0;
  -moz-scroll-margin-right: 0;
  -ms-scroll-margin-right: 0;
  scroll-margin-right: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-right: 0;
  -moz-scroll-margin-right: 0;
  -ms-scroll-margin-right: 0;
  scroll-margin-right: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-right: 0;
  -moz-scroll-margin-right: 0;
  -ms-scroll-margin-right: 0;
  scroll-margin-right: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-right: 0;
  -moz-scroll-margin-right: 0;
  -ms-scroll-margin-right: 0;
  scroll-margin-right: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollMarginRight renders function 1`] = `
Array [
  .c0 {
  -webkit-scroll-margin-right: hasnot;
  -moz-scroll-margin-right: hasnot;
  -ms-scroll-margin-right: hasnot;
  scroll-margin-right: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-right: has;
  -moz-scroll-margin-right: has;
  -ms-scroll-margin-right: has;
  scroll-margin-right: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-right: hasnot;
  -moz-scroll-margin-right: hasnot;
  -ms-scroll-margin-right: hasnot;
  scroll-margin-right: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-right: has;
  -moz-scroll-margin-right: has;
  -ms-scroll-margin-right: has;
  scroll-margin-right: has;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollMarginRight renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-scroll-margin-right: invalid.path.1;
  -moz-scroll-margin-right: invalid.path.1;
  -ms-scroll-margin-right: invalid.path.1;
  scroll-margin-right: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-right: invalid.path.1;
  -moz-scroll-margin-right: invalid.path.1;
  -ms-scroll-margin-right: invalid.path.1;
  scroll-margin-right: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-right: invalid.path.1;
  -moz-scroll-margin-right: invalid.path.1;
  -ms-scroll-margin-right: invalid.path.1;
  scroll-margin-right: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-right: invalid.path.1;
  -moz-scroll-margin-right: invalid.path.1;
  -ms-scroll-margin-right: invalid.path.1;
  scroll-margin-right: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollMarginRight renders negative number 1`] = `
Array [
  .c0 {
  -webkit-scroll-margin-right: -54881px;
  -moz-scroll-margin-right: -54881px;
  -ms-scroll-margin-right: -54881px;
  scroll-margin-right: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-right: -54881px;
  -moz-scroll-margin-right: -54881px;
  -ms-scroll-margin-right: -54881px;
  scroll-margin-right: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-right: -42365px;
  -moz-scroll-margin-right: -42365px;
  -ms-scroll-margin-right: -42365px;
  scroll-margin-right: -42365px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-right: -42365px;
  -moz-scroll-margin-right: -42365px;
  -ms-scroll-margin-right: -42365px;
  scroll-margin-right: -42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollMarginRight renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-right: July;
    -moz-scroll-margin-right: July;
    -ms-scroll-margin-right: July;
    scroll-margin-right: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-right: August;
    -moz-scroll-margin-right: August;
    -ms-scroll-margin-right: August;
    scroll-margin-right: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-right: September;
    -moz-scroll-margin-right: September;
    -ms-scroll-margin-right: September;
    scroll-margin-right: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-margin-right: November;
    -moz-scroll-margin-right: November;
    -ms-scroll-margin-right: November;
    scroll-margin-right: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-right: July;
    -moz-scroll-margin-right: July;
    -ms-scroll-margin-right: July;
    scroll-margin-right: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-right: August;
    -moz-scroll-margin-right: August;
    -ms-scroll-margin-right: August;
    scroll-margin-right: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-right: September;
    -moz-scroll-margin-right: September;
    -ms-scroll-margin-right: September;
    scroll-margin-right: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-margin-right: November;
    -moz-scroll-margin-right: November;
    -ms-scroll-margin-right: November;
    scroll-margin-right: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-right: May;
    -moz-scroll-margin-right: May;
    -ms-scroll-margin-right: May;
    scroll-margin-right: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-right: June;
    -moz-scroll-margin-right: June;
    -ms-scroll-margin-right: June;
    scroll-margin-right: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-right: April;
    -moz-scroll-margin-right: April;
    -ms-scroll-margin-right: April;
    scroll-margin-right: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-margin-right: November;
    -moz-scroll-margin-right: November;
    -ms-scroll-margin-right: November;
    scroll-margin-right: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-right: May;
    -moz-scroll-margin-right: May;
    -ms-scroll-margin-right: May;
    scroll-margin-right: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-right: June;
    -moz-scroll-margin-right: June;
    -ms-scroll-margin-right: June;
    scroll-margin-right: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-right: April;
    -moz-scroll-margin-right: April;
    -ms-scroll-margin-right: April;
    scroll-margin-right: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-margin-right: November;
    -moz-scroll-margin-right: November;
    -ms-scroll-margin-right: November;
    scroll-margin-right: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`scrollMarginRight renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    -webkit-scroll-margin-right: July;
    -moz-scroll-margin-right: July;
    -ms-scroll-margin-right: July;
    scroll-margin-right: July;
  }
}

@media April {
  .c0 {
    -webkit-scroll-margin-right: August;
    -moz-scroll-margin-right: August;
    -ms-scroll-margin-right: August;
    scroll-margin-right: August;
  }
}

@media January {
  .c0 {
    -webkit-scroll-margin-right: September;
    -moz-scroll-margin-right: September;
    -ms-scroll-margin-right: September;
    scroll-margin-right: September;
  }
}

@media April {
  .c0 {
    -webkit-scroll-margin-right: November;
    -moz-scroll-margin-right: November;
    -ms-scroll-margin-right: November;
    scroll-margin-right: November;
  }
}

@media June {
  .c0 {
    -webkit-scroll-margin-right: August;
    -moz-scroll-margin-right: August;
    -ms-scroll-margin-right: August;
    scroll-margin-right: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-scroll-margin-right: July;
    -moz-scroll-margin-right: July;
    -ms-scroll-margin-right: July;
    scroll-margin-right: July;
  }
}

@media April {
  .c0 {
    -webkit-scroll-margin-right: August;
    -moz-scroll-margin-right: August;
    -ms-scroll-margin-right: August;
    scroll-margin-right: August;
  }
}

@media January {
  .c0 {
    -webkit-scroll-margin-right: September;
    -moz-scroll-margin-right: September;
    -ms-scroll-margin-right: September;
    scroll-margin-right: September;
  }
}

@media April {
  .c0 {
    -webkit-scroll-margin-right: November;
    -moz-scroll-margin-right: November;
    -ms-scroll-margin-right: November;
    scroll-margin-right: November;
  }
}

@media June {
  .c0 {
    -webkit-scroll-margin-right: August;
    -moz-scroll-margin-right: August;
    -ms-scroll-margin-right: August;
    scroll-margin-right: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-scroll-margin-right: January;
    -moz-scroll-margin-right: January;
    -ms-scroll-margin-right: January;
    scroll-margin-right: January;
  }
}

@media April {
  .c0 {
    -webkit-scroll-margin-right: December;
    -moz-scroll-margin-right: December;
    -ms-scroll-margin-right: December;
    scroll-margin-right: December;
  }
}

@media January {
  .c0 {
    -webkit-scroll-margin-right: April;
    -moz-scroll-margin-right: April;
    -ms-scroll-margin-right: April;
    scroll-margin-right: April;
  }
}

@media April {
  .c0 {
    -webkit-scroll-margin-right: May;
    -moz-scroll-margin-right: May;
    -ms-scroll-margin-right: May;
    scroll-margin-right: May;
  }
}

@media June {
  .c0 {
    -webkit-scroll-margin-right: June;
    -moz-scroll-margin-right: June;
    -ms-scroll-margin-right: June;
    scroll-margin-right: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-scroll-margin-right: January;
    -moz-scroll-margin-right: January;
    -ms-scroll-margin-right: January;
    scroll-margin-right: January;
  }
}

@media April {
  .c0 {
    -webkit-scroll-margin-right: December;
    -moz-scroll-margin-right: December;
    -ms-scroll-margin-right: December;
    scroll-margin-right: December;
  }
}

@media January {
  .c0 {
    -webkit-scroll-margin-right: April;
    -moz-scroll-margin-right: April;
    -ms-scroll-margin-right: April;
    scroll-margin-right: April;
  }
}

@media April {
  .c0 {
    -webkit-scroll-margin-right: May;
    -moz-scroll-margin-right: May;
    -ms-scroll-margin-right: May;
    scroll-margin-right: May;
  }
}

@media June {
  .c0 {
    -webkit-scroll-margin-right: June;
    -moz-scroll-margin-right: June;
    -ms-scroll-margin-right: June;
    scroll-margin-right: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`scrollMarginRight renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-scroll-margin-right: 54881px;
  -moz-scroll-margin-right: 54881px;
  -ms-scroll-margin-right: 54881px;
  scroll-margin-right: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-right: 54881px;
  -moz-scroll-margin-right: 54881px;
  -ms-scroll-margin-right: 54881px;
  scroll-margin-right: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-right: 42365px;
  -moz-scroll-margin-right: 42365px;
  -ms-scroll-margin-right: 42365px;
  scroll-margin-right: 42365px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-right: 42365px;
  -moz-scroll-margin-right: 42365px;
  -ms-scroll-margin-right: 42365px;
  scroll-margin-right: 42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollMarginRight renders string 1`] = `
Array [
  .c0 {
  -webkit-scroll-margin-right: July;
  -moz-scroll-margin-right: July;
  -ms-scroll-margin-right: July;
  scroll-margin-right: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-right: July;
  -moz-scroll-margin-right: July;
  -ms-scroll-margin-right: July;
  scroll-margin-right: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-right: June;
  -moz-scroll-margin-right: June;
  -ms-scroll-margin-right: June;
  scroll-margin-right: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-right: June;
  -moz-scroll-margin-right: June;
  -ms-scroll-margin-right: June;
  scroll-margin-right: June;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollMarginRight renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-scroll-margin-right: DarkSlateBlue;
  -moz-scroll-margin-right: DarkSlateBlue;
  -ms-scroll-margin-right: DarkSlateBlue;
  scroll-margin-right: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-right: DarkSlateBlue;
  -moz-scroll-margin-right: DarkSlateBlue;
  -ms-scroll-margin-right: DarkSlateBlue;
  scroll-margin-right: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-right: DarkSlateBlue;
  -moz-scroll-margin-right: DarkSlateBlue;
  -ms-scroll-margin-right: DarkSlateBlue;
  scroll-margin-right: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-right: DarkSlateBlue;
  -moz-scroll-margin-right: DarkSlateBlue;
  -ms-scroll-margin-right: DarkSlateBlue;
  scroll-margin-right: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
